--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,11 +18,15 @@ jobs:
     runs-on: ubuntu-latest
     needs: checkout
     steps:
+      - name: Faz o checkout
+        uses: actions/checkout@v4
+    
       - name: Configura o Java
         uses: actions/setup-java@v3
         with:
           distribution: 'temurin'
           java-version: '21'
+          
       - name: Executa o build do projeto
         run: mvn clean install
 
@@ -30,10 +34,14 @@ jobs:
     runs-on: ubuntu-latest
     needs: build
     steps:
+      - name: Faz o checkout
+        uses: actions/checkout@v4
+    
       - name: Configura o Java
         uses: actions/setup-java@v3
         with:
           distribution: 'temurin'
           java-version: '21'
+          
       - name: Executa os testes
         run: mvn test
