--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -45,3 +45,28 @@ jobs:
           
       - name: Executa os testes
         run: mvn test
+
+  package:
+    runs-on: ubuntu-latest
+    needs: test
+    steps:
+      - name: Faz o checkout
+        uses: actions/checkout@v4
+    
+      - name: Configura o Java
+        uses: actions/setup-java@v3
+        with:
+          distribution: 'temurin'
+          java-version: '21'
+          
+      - name: Gera o pacote
+        run: mvn package
+
+  deploy:
+    runs-on: ubuntu-latest
+    needs: [build, test]
+    steps:
+      - name: Deploy
+        run: echo "Deploy realizado com sucesso"
+
+    
