--- a/.github/workflows/lint-and-test.yml
+++ b/.github/workflows/lint-and-test.yml
@@ -18,7 +18,7 @@ jobs:
           java-version: '21'
 
       - name: Instala dependências sem os testes
-        run: mvn install -DskipTests
+        run: mvn clean install -DskipTests
 
       - name: Executa a verificação de estilo
         run: mvn checkstyle:checkstyle
