--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,8 +23,8 @@ jobs:
   lint_and_test:
     uses: ./.github/workflows/lint-and-test.yml
     with:
-      run_lint: ${{ github.event.inputs.run_lint || true }}
-      run_tests: ${{ github.event.inputs.run_tests || true }}
+      run_lint: ${{ github.event_name == 'workflow_dispatch' && github.event.inputs.run_lint || 'true' }}
+      run_tests: ${{ github.event_name == 'workflow_dispatch' && github.event.inputs.run_tests || 'true' }}
 
   package:
     runs-on: ubuntu-latest
