--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,12 +5,12 @@ on:
     inputs:
       run_tests:
         description: 'Executar testes?'
-        required: true
+        required: false
         default: true
         type: boolean
       run_lint:
         description: 'Executar lint?'
-        required: true
+        required: false
         default: true
         type: boolean
   push:
@@ -23,8 +23,8 @@ jobs:
   lint_and_test:
     uses: ./.github/workflows/lint-and-test.yml
     with:
-      run_lint: ${{ github.event_name == 'workflow_dispatch' && github.event.inputs.run_lint || 'true' }}
-      run_tests: ${{ github.event_name == 'workflow_dispatch' && github.event.inputs.run_tests || 'true' }}
+      run_tests: ${{ github.event_name != 'workflow_dispatch' || github.event.inputs.run_tests == 'true' }}
+      run_lint: ${{ github.event_name != 'workflow_dispatch' || github.event.inputs.run_lint == 'true' }}
 
   package:
     runs-on: ubuntu-latest
