--- a/.github/workflows/lint-and-test.yml
+++ b/.github/workflows/lint-and-test.yml
@@ -16,6 +16,9 @@ jobs:
     name: Verifica o estilo do código
     runs-on: ubuntu-latest
     steps:
+      - name: Simulando erro
+        run: exit 1
+        
       - name: Faz o checkout
         uses: actions/checkout@v4
 
@@ -36,6 +39,9 @@ jobs:
     name: Realiza os testes
     runs-on: ubuntu-latest
     steps:
+      - name: Simulando erro
+        run: exit 1
+        
       - name: Faz o checkout
         uses: actions/checkout@v4
 
