Criando erro no hello.yml

--- a/.github/workflows/hello.yml
+++ b/.github/workflows/hello.yml
@@ -12,4 +12,6 @@ jobs:
 
     steps:
       - name: Exibir mensagem
-        run: echo "Pipeline iniciado com sucesso"
+        run: 
+          echo "Pipeline iniciado com sucesso"
+          echo "Pipeline iniciado com sucesso"
