--- a/.github/workflows/hello.yml
+++ b/.github/workflows/hello.yml
@@ -12,6 +12,5 @@ jobs:
 
     steps:
       - name: Exibir mensagem
-        run: 
-          echo "Pipeline iniciado com sucesso"
+        !@#!@3asda: 
           echo "Pipeline iniciado com sucesso"
