--- a/.github/workflows/hello.yml
+++ b/.github/workflows/hello.yml
@@ -12,5 +12,4 @@ jobs:
 
     steps:
       - name: Exibir mensagem
-        !@#!@3asda: 
-          echo "Pipeline iniciado com sucesso"
+        run: eko "Pipeline iniciado com sucesso"
