Correção do arquivo variables-and-secrets.yml

--- a/.github/workflows/variables-and-secrets.yml
+++ b/.github/workflows/variables-and-secrets.yml
@@ -1,18 +1,16 @@
 name: Variáveis e segredos
-
 on:
   workflow_dispatch:
-
 jobs:
   variaveis-e-secrets:
     runs-on: self-hosted
-
     steps:
       - name: Exibir a variável APP_MODE
+        shell: cmd
         run: 'echo APP_MODE = ${{ vars.APP_MODE }}'
-
       - name: Exibir a variável SUPPORT_EMAIL
+        shell: cmd
         run: 'echo SUPPORT_EMAIL = ${{ vars.SUPPORT_EMAIL }}'
-
       - name: Exibir o segredo PROD_TOKEN
+        shell: cmd
         run: 'echo Atividade permitida via PROD_TOKEN ${{ secrets.PROD_TOKEN }}'
